--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,40 +1,35 @@
-name: Tests
+name: Python Tests
 
 on:
   push:
-    branches-ignore: ['']
+    branches:
+      - '*'
   pull_request:
-    branches-ignore: ['']
-
-permissions:
-  contents: read
+    branches:
+      - '*'
 
 jobs:
-  build:
-
+  test:
+    name: Test with Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11, 3.12]
+        python-version: [3.7, 3.8, 3.9, 3.10, 3.11, 3.12]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f backend/requirements.txt ]; then pip install -r backend/requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # Stop the build if there are Python syntax errors or undefined names
-        flake8 backend --count --select=E9,F63,F7,F82 --show-source --statistics
-        # Exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 backend --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest backend/tests/unit backend/tests/integration
+      run: pip install -r backend/requirements.txt
+
+    - name: Run unit tests
+      run: python -m unittest discover -s backend/tests/unit
+
+    - name: Run integration tests
+      run: python -m unittest discover -s backend/tests/integration
