--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Python Tests
+name: Tests
 
 on:
   push:
@@ -24,12 +24,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+        architecture: x64  # Specify architecture
 
     - name: Install dependencies
-      run: pip install -r backend/requirements.txt
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r backend/requirements.txt
 
-    - name: Run unit tests
-      run: python -m unittest discover -s backend/tests/unit
-
-    - name: Run integration tests
-      run: python -m unittest discover -s backend/tests/integration
+    - name: Run tests
+      run: pytest backend/tests
