--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,7 @@ jobs:
         python-version: [ '3.7', '3.8', '3.9', '3.10', '3.11', '3.12' ]
 
     runs-on: ${{ matrix.platform }}
+    timeout-minutes: 20
 
     steps:
       # Checkout the latest code from the repo
