--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         platform: [ ubuntu-latest, windows-latest ]
-        python-version: [ '3.7', '3.8', '3.9', '3.10', '3.11', '3.12' ]
+        python-version: [ '3.8', '3.9', '3.10', '3.11', '3.12' ]
 
     runs-on: ${{ matrix.platform }}
     timeout-minutes: 20
@@ -30,13 +30,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Navigate to root project directory
-        run: cd $GITHUB_WORKSPACE
-  
-      - name: Add root directory to PYTHONPATH
-        run: |
-          export PYTHONPATH="${PYTHONPATH}:${GITHUB_WORKSPACE}"
 
       - name: Change to backend/ folder
         run: cd backend/
