--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,5 +50,5 @@ jobs:
           
       - name: Run tests
         run: |
-          export PYTHONPATH="$PWD/backend/src:$PYTHONPATH"
+          export PYTHONPATH="$PWD/backend:$PYTHONPATH"
           python -m pytest  
