--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --no-cache-dir -r -e backend/requirements.txt
+          pip install --no-cache-dir -r -e requirements.txt
           pip install flake8 pytest
 
       - name: Lint with flake8
@@ -50,5 +50,4 @@ jobs:
           
       - name: Run tests
         run: |
-          export PYTHONPATH="$PWD/backend:$PYTHONPATH"
           python -m pytest  
