--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,6 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
 jobs:
   test:
     strategy:
@@ -31,23 +30,24 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Change to backend/ folder
-        run: cd backend/
-        
       # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --no-cache-dir -r requirements.txt
+          pip install --no-cache-dir -r backend/requirements.txt
           pip install flake8 pytest
 
+      # Change to root directory
+      - name: Change to root directory
+        run: cd $GITHUB_WORKSPACE/backend
+        
       - name: Lint with flake8
         run: |
           # Stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 src tests --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          flake8 src tests --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
           
       - name: Run tests
         run: |
-          python -m pytest  
+          python -m pytest backend/tests 
