--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,14 +32,14 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Change to backend/ folder
-        run: cd backend/
-
-      - name: Print current working directory
-        run: pwd
+        run: |
+          cd backend/
+          pwd
         
       # Install dependencies
       - name: Install dependencies
         run: |
+          cd backend/
           python -m pip install --upgrade pip
           pip install --no-cache-dir -r requirements.txt
           pip install flake8 pytest
@@ -49,14 +49,13 @@ jobs:
         
       - name: Lint with flake8
         run: |
+          cd backend/
           # Stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-      - name: Print current working directory
-        run: pwd
         
       - name: Run tests
         run: |
+          cd backend/
           python -m pytest 
