--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         platform: [ ubuntu-latest, windows-latest ]
-        python-version: [ '3.8', '3.9', '3.10', '3.11', '3.12' ]
+        python-version: [ '3.10', '3.11', '3.12' ]
 
     runs-on: ${{ matrix.platform }}
     timeout-minutes: 20
@@ -30,11 +30,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Change to backend/ folder
-        run: |
-          cd backend/
-          pwd
         
       # Install dependencies
       - name: Install dependencies
@@ -43,9 +38,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install --no-cache-dir -r requirements.txt
           pip install flake8 pytest
-
-      - name: Print current working directory
-        run: pwd
         
       - name: Lint with flake8
         run: |
