--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
+    "@mui/x-charts": "^6.19.3",
     "@mui/x-data-grid": "^6.19.3",
     "react-router-dom": "^6.22.0",
     "react-virtuoso": "^4.6.3",
