--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,22 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "@mui/x-charts": "^6.19.3",
     "@mui/x-data-grid": "^6.19.3",
+    "lodash": "^4.17.21",
     "react-router-dom": "^6.22.0",
     "react-virtuoso": "^4.6.3",
+    "use-local-storage": "^3.0.0",
     "vite": "^5.0.12"
   },
   "scripts": {
     "dev": "vite"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
+    "@types/react-dom": "^18.2.23",
     "@vitejs/plugin-react": "^4.2.1"
   }
 }
