--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.21",
     "react-router-dom": "^6.22.0",
     "react-virtuoso": "^4.6.3",
+    "swr": "^2.2.5",
     "use-local-storage": "^3.0.0",
     "vite": "^5.0.12"
   },
