--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,6 @@ on:
     branches: [ "*" ]
   pull_request:
     branches: [ "*" ]
- 
   workflow_dispatch:
 
 jobs:
@@ -24,25 +23,27 @@ jobs:
       DB_USERNAME: ${{ secrets.DB_USERNAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_NAME: ${{ secrets.DB_NAME }}
-      PAT: ${{ secrets.PAT }} # Ensure the PAT is accessible here
+      PAT: ${{ secrets.PAT }} 
 
     steps:
       - name: Trigger MongoDB Setup
         run: |
-          if [ "$RUNNER_OS" = "Windows" ]; then
-            # For Windows, use PowerShell's Invoke-RestMethod
-            $body = @{
-                event_type = "setup-mongodb"
-                client_payload = @{
-                    DB_HOST = "${env:DB_HOST}"
-                    DB_PORT = "${env:DB_PORT}"
-                    DB_USERNAME = "${env:DB_USERNAME}"
-                    DB_PASSWORD = "${env:DB_PASSWORD}"
-                    DB_NAME = "${env:DB_NAME}"
-                }
-            } | ConvertTo-Json
-            Invoke-RestMethod -Uri "https://api.github.com/repos/${env:OWNER}/${env:REPO}/dispatches" -Method Post -Headers @{ "Authorization" = "token ${env:PAT}"; "Accept" = "application/vnd.github.everest-preview+json"; "Content-Type" = "application/json" } -Body $body
-          else
+          case "$RUNNER_OS" in
+            "Windows")
+              # For Windows, use PowerShell's Invoke-RestMethod
+              $body = @{
+                  event_type = "setup-mongodb"
+                  client_payload = @{
+                      DB_HOST = "${env:DB_HOST}"
+                      DB_PORT = "${env:DB_PORT}"
+                      DB_USERNAME = "${env:DB_USERNAME}"
+                      DB_PASSWORD = "${env:DB_PASSWORD}"
+                      DB_NAME = "${env:DB_NAME}"
+                  }
+              } | ConvertTo-Json
+              Invoke-RestMethod -Uri "https://api.github.com/repos/${env:OWNER}/${env:REPO}/dispatches" -Method Post -Headers @{ "Authorization" = "token ${env:PAT}"; "Accept" = "application/vnd.github.everest-preview+json"; "Content-Type" = "application/json" } -Body $body
+              ;;
+            *)
               # For Ubuntu, use curl
               curl -X POST \
                   -H "Authorization: token ${{ secrets.PAT }}" \
@@ -50,9 +51,8 @@ jobs:
                   -H "Content-Type: application/json" \
                   https://api.github.com/repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/dispatches \
                   --data '{"event_type": "setup-mongodb", "client_payload": {"DB_HOST": "${{ secrets.DB_HOST }}", "DB_PORT": "${{ secrets.DB_PORT }}", "DB_USERNAME": "${{ secrets.DB_USERNAME }}", "DB_PASSWORD": "${{ secrets.DB_PASSWORD }}", "DB_NAME": "${{ secrets.DB_NAME }}"}}'
-          fi
-
-
+              ;;
+          esac
         env:
           OWNER: ${{ github.repository_owner }}
           REPO: ${{ github.event.repository.name }}
@@ -88,4 +88,4 @@ jobs:
       - name: Run tests
         run: |
           cd backend/
-          python -m pytest 
+          python -m pytest
