--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,29 +27,38 @@ jobs:
 
     steps:
       - name: Trigger MongoDB Setup
+        if: runner.os == 'Windows'
+        shell: bash
         run: |
-          if ($env:RUNNER_OS -eq "Windows") {
-            # For Windows, use PowerShell's Invoke-RestMethod
-            $body = @{
-                event_type = "setup-mongodb"
-                client_payload = @{
-                    DB_HOST = "${env:DB_HOST}"
-                    DB_PORT = "${env:DB_PORT}"
-                    DB_USERNAME = "${env:DB_USERNAME}"
-                    DB_PASSWORD = "${env:DB_PASSWORD}"
-                    DB_NAME = "${env:DB_NAME}"
-                }
-            } | ConvertTo-Json
-            Invoke-RestMethod -Uri "https://api.github.com/repos/${env:OWNER}/${env:REPO}/dispatches" -Method Post -Headers @{ "Authorization" = "token ${env:PAT}"; "Accept" = "application/vnd.github.everest-preview+json"; "Content-Type" = "application/json" } -Body $body
-          } else {
-            # For Ubuntu, use curl
-            curl -X POST \
-                -H "Authorization: token ${{ secrets.PAT }}" \
-                -H "Accept: application/vnd.github.everest-preview+json" \
-                -H "Content-Type: application/json" \
-                https://api.github.com/repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/dispatches \
-                --data '{"event_type": "setup-mongodb", "client_payload": {"DB_HOST": "${{ secrets.DB_HOST }}", "DB_PORT": "${{ secrets.DB_PORT }}", "DB_USERNAME": "${{ secrets.DB_USERNAME }}", "DB_PASSWORD": "${{ secrets.DB_PASSWORD }}", "DB_NAME": "${{ secrets.DB_NAME }}"}}'
-          }
+          # For Windows, use PowerShell's Invoke-RestMethod
+          $body = @{
+              event_type = "setup-mongodb"
+              client_payload = @{
+                  DB_HOST = "${env:DB_HOST}"
+                  DB_PORT = "${env:DB_PORT}"
+                  DB_USERNAME = "${env:DB_USERNAME}"
+                  DB_PASSWORD = "${env:DB_PASSWORD}"
+                  DB_NAME = "${env:DB_NAME}"
+              }
+          } | ConvertTo-Json
+          Invoke-RestMethod -Uri "https://api.github.com/repos/${env:OWNER}/${env:REPO}/dispatches" -Method Post -Headers @{ "Authorization" = "token ${env:PAT}"; "Accept" = "application/vnd.github.everest-preview+json"; "Content-Type" = "application/json" } -Body $body
+          
+        env:
+          OWNER: ${{ github.repository_owner }}
+          REPO: ${{ github.event.repository.name }}
+          DEBUG: "true"
+
+      - name: Trigger MongoDB Setup
+        if: runner.os != 'Windows'
+        run: |
+          # For Ubuntu, use curl
+          curl -X POST \
+              -H "Authorization: token ${{ secrets.PAT }}" \
+              -H "Accept: application/vnd.github.everest-preview+json" \
+              -H "Content-Type: application/json" \
+              https://api.github.com/repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/dispatches \
+              --data '{"event_type": "setup-mongodb", "client_payload": {"DB_HOST": "${{ secrets.DB_HOST }}", "DB_PORT": "${{ secrets.DB_PORT }}", "DB_USERNAME": "${{ secrets.DB_USERNAME }}", "DB_PASSWORD": "${{ secrets.DB_PASSWORD }}", "DB_NAME": "${{ secrets.DB_NAME }}"}}'
+
         env:
           OWNER: ${{ github.repository_owner }}
           REPO: ${{ github.event.repository.name }}
