--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,25 @@ on:
   workflow_dispatch:
 
 jobs:
+  setup_mongodb:
+    name: MongoDB Setup
+    runs-on: ubuntu-latest
+
+    services:
+      mongodb:
+        image: mongo:latest
+        ports:
+          - ${{ secrets.DB_PORT }}:27017
+        env:
+          MONGO_INITDB_ROOT_USERNAME: ${{ secrets.DB_USERNAME }}
+          MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
+    steps:
+      - name: MongoDB Setup
+        run: docker ps -a
+
   test:
+    name: Run Tests
     strategy:
       matrix:
         platform: [ ubuntu-latest, windows-latest ]
@@ -18,72 +36,31 @@ jobs:
     timeout-minutes: 20
 
     env:
-      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_HOST: localhost
       DB_PORT: ${{ secrets.DB_PORT }}
       DB_USERNAME: ${{ secrets.DB_USERNAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_NAME: ${{ secrets.DB_NAME }}
       PAT: ${{ secrets.PAT }} # Ensure the PAT is accessible here
 
+    needs: setup_mongodb # Ensure MongoDB setup is complete before running tests
+
     steps:
-      - name: Trigger MongoDB Setup
-        if: runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          # For Windows, use PowerShell's Invoke-RestMethod
-          $body = @{
-              event_type = "setup-mongodb"
-              client_payload = @{
-                  DB_HOST = "${env:DB_HOST}"
-                  DB_PORT = "${env:DB_PORT}"
-                  DB_USERNAME = "${env:DB_USERNAME}"
-                  DB_PASSWORD = "${env:DB_PASSWORD}"
-                  DB_NAME = "${env:DB_NAME}"
-              }
-          }
-          $jsonBody = $body | ConvertTo-Json
-          Invoke-RestMethod -Uri "https://api.github.com/repos/${env:OWNER}/${env:REPO}/dispatches" -Method Post -Headers @{ "Authorization" = "token ${env:PAT}"; "Accept" = "application/vnd.github.everest-preview+json"; "Content-Type" = "application/json" } -Body $jsonBody
-          
-        env:
-          OWNER: ${{ github.repository_owner }}
-          REPO: ${{ github.event.repository.name }}
-          DEBUG: "true"
-
-      - name: Trigger MongoDB Setup
-        if: runner.os != 'Windows'
-        run: |
-          # For Ubuntu, use curl
-          curl -X POST \
-              -H "Authorization: token ${{ secrets.PAT }}" \
-              -H "Accept: application/vnd.github.everest-preview+json" \
-              -H "Content-Type: application/json" \
-              https://api.github.com/repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/dispatches \
-              --data '{"event_type": "setup-mongodb", "client_payload": {"DB_HOST": "${{ secrets.DB_HOST }}", "DB_PORT": "${{ secrets.DB_PORT }}", "DB_USERNAME": "${{ secrets.DB_USERNAME }}", "DB_PASSWORD": "${{ secrets.DB_PASSWORD }}", "DB_NAME": "${{ secrets.DB_NAME }}"}}'
-
-        env:
-          OWNER: ${{ github.repository_owner }}
-          REPO: ${{ github.event.repository.name }}
-          DEBUG: "true"
-
-      - name: Wait for MongoDB setup completion
-        if: env.DEBUG == 'true'
-        run: sleep 30 
- 
       - name: Checkout repo
         uses: actions/checkout@v3
- 
+
       - name: Set Up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-         
+
       - name: Install dependencies
         run: |
           cd backend/
           python -m pip install --upgrade pip
           pip install --no-cache-dir -r requirements.txt
           pip install flake8 pytest
-        
+
       - name: Lint with flake8
         run: |
           cd backend/
@@ -91,7 +68,7 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        
+
       - name: Run tests
         run: |
           cd backend/
