--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,18 +17,13 @@ jobs:
       DB_USERNAME: ${{ secrets.DB_USERNAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
-    services:
-      mongodb:
-        image: mongo:latest
-        ports:
-          - ${{ env.DB_PORT }}:27017
-        env:
-          MONGO_INITDB_ROOT_USERNAME: ${{ env.DB_USERNAME }}
-          MONGO_INITDB_ROOT_PASSWORD: ${{ env.DB_PASSWORD }}
-
     steps:
       - name: MongoDB Setup
-        run: docker ps -a
+        run: |
+          docker run -d -p $DB_PORT:27017 --name mongodb mongo:latest
+          echo "Waiting for MongoDB to start"
+          sleep 15 
+          docker ps -a
 
   test:
     name: Run Tests
@@ -42,6 +37,7 @@ jobs:
 
     env:
       DB_HOST: localhost
+      DB_PORT: ${{ secrets.DB_PORT }}
       DB_USERNAME: ${{ secrets.DB_USERNAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_NAME: ${{ secrets.DB_NAME }}
