--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,8 @@ jobs:
           docker run -d --rm --name mongodb -p $DB_PORT:27017 \
             -e MONGO_INITDB_ROOT_USERNAME=$DB_USERNAME \
             -e MONGO_INITDB_ROOT_PASSWORD=$DB_PASSWORD \
-            mongo:latest
+            mongo
+
           echo "Waiting for MongoDB to start"
           sleep 10
           docker ps -a
