--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     name: Run Tests
     strategy:
       matrix:
-        platform: [ ubuntu-latest, windows-latest ]
+        platform: [ ubuntu-latest ]
         python-version: [ '3.10', '3.11', '3.12' ]
 
     runs-on: ${{ matrix.platform }}
