--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,12 +10,11 @@ on:
 jobs:
   test:
     name: Run Tests
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: [ ubuntu-latest ]
         python-version: [ '3.10', '3.11', '3.12' ]
 
-    runs-on: ${{ matrix.platform }}
     timeout-minutes: 20
 
     env:
@@ -35,11 +34,7 @@ jobs:
           MONGO_INITDB_DATABASE: ${{ secrets.DB_NAME }}
         ports:
           - 27017:27017
-        options: >-
-          --health-cmd mongo
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+        options: --health-cmd "mongo --eval \"db.stats().ok\"" --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - name: Install Mongosh
@@ -62,7 +57,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set Up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
