--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         platform: [ ubuntu-latest ]
         python-version: [ '3.10', '3.11', '3.12' ]
-        mongodb-version: [ '4.2', '4.4', '5.0', '6.0' ]
+        mongodb-version: [ '5.0', '6.0' ]
  
     runs-on: ${{ matrix.platform }}
     timeout-minutes: 20
