--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
     timeout-minutes: 20
 
     env:
-      DB_HOST: localhost
+      DB_HOST: ${{ secrets.DB_HOST }}
       DB_PORT: ${{ secrets.DB_PORT }}
       DB_USERNAME: ${{ secrets.DB_USERNAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -36,7 +36,6 @@ jobs:
             mongodb-password: ${{ env.DB_PASSWORD }} 
             mongodb-db: ${{ env.DB_NAME }}
             mongodb-port: ${{ env.DB_PORT }}
-            mongodb-uri: mongodb://${{ env.DB_USERNAME }}:${{ env.DB_PASSWORD }}@${{ env.DB_HOST }}:${{ env.DB_PORT }}/${{ env.DB_NAME }}
 
       - name: Checkout repo
         uses: actions/checkout@v3
