--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,26 +1,10 @@
-annotated-types==0.6.0
-anyio==4.3.0
-beanie==1.25.0
-click==8.1.7
-colorama==0.4.6
-dnspython==2.6.1
-fastapi==0.110.2
-h11==0.14.0
-idna==3.7
-iniconfig==2.0.0
-lazy-model==0.2.0
+beanie==1.26.0
+fastapi==0.111.0
 motor==3.4.0
-packaging==24.0
-pluggy==1.5.0
-pydantic==2.7.0
-pydantic-settings==2.2.1
-pydantic_core==2.18.1
-pymongo==4.6.3
-pytest==8.1.1
-pytest-asyncio==0.23.6
-python-dotenv==1.0.1
-sniffio==1.3.1
-starlette==0.37.2
-toml==0.10.2
-typing_extensions==4.11.0
-uvicorn==0.29.0
+passlib==1.7.4
+pydantic==2.7.3
+pydantic_settings==2.3.0
+PyJWT==2.8.0
+PyJWT==2.8.0
+pytest==8.2.2
+uvicorn==0.30.1
