--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^5.15.15",
     "@mui/x-charts": "^7.1.1",
     "@mui/x-data-grid": "^6.19.3",
+    "axios": "^1.7.2",
     "lodash": "^4.17.21",
     "react-router-dom": "^6.22.0",
     "react-virtuoso": "^4.6.3",
