--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,18 @@ FROM python:3.12.3-alpine3.20 AS builder
 
 WORKDIR /backend
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apk add --no-cache curl
+RUN curl -sSL https://install.python-poetry.org | POETRY_HOME=/opt/poetry python && \
+    cd /usr/local/bin && \
+    ln -s /opt/poetry/bin/poetry && \
+    poetry config virtualenvs.create false
+
+ENV PATH="/root/.local/bin:$PATH"
+
+COPY ./pyproject.toml ./poetry.lock* ./
+
+ARG INSTALL_DEV=false
+RUN if [ "$INSTALL_DEV" = "true" ]; then poetry install --no-root; else poetry install --no-root --only main; fi
 
 # Stage 2: Final stage
 FROM python:3.12.3-alpine3.20
