--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,15 +7,20 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10"
+uvicorn = "^0.30.1"
 fastapi = "^0.111.0"
 beanie = "^1.26.0"
+python-multipart = "^0.0.7"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 pydantic = "^2.7.3"
-pyjwt = "^2.8.0"
-pytest = "^8.2.2"
-bcrypt = "^4.1.3"
-uvicorn = "^0.30.1"
+bcrypt = "4.0.1" # Pin bcrypt until passlib supports the latest
 pydantic-settings = "^2.3.1"
+pyjwt = "^2.8.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
+ruff = "^0.4.8"
 
 
 [build-system]
