--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,7 +47,8 @@ jobs:
       - name: Install Poetry
         run: |
             curl -sSL https://install.python-poetry.org | POETRY_HOME=/opt/poetry python && \
-            export PATH="/opt/poetry/bin:$PATH" && \
+            cd /usr/local/bin && \
+            ln -s /opt/poetry/bin/poetry && \
             poetry config virtualenvs.create false
 
       - name: Install dependencies
