--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,7 +46,12 @@ jobs:
 
       - name: Install Poetry
         run: |
-            curl -sSL https://install.python-poetry.org | POETRY_VERSION=1.2.0 python3 -
+            curl -sSL https://install.python-poetry.org | && \
+            POETRY_VERSION=1.2.0 python3 - && \
+            POETRY_HOME=/opt/poetry python && \
+            cd /usr/local/bin && \
+            ln -s /opt/poetry/bin/poetry && \
+            poetry config virtualenvs.create false
 
       - name: Install dependencies
         run: |
