--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -62,7 +62,8 @@ jobs:
           cd backend/
           ruff check . \
             --select "E,W,F,I,B,C4,UP,ARG001" \
-            --ignore "E501,B008,W191,B904"
+            --ignore "E501,B008,W191,B904" \
+            --no-fail
 
       - name: Run tests
         run: |
