--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,9 @@ pyjwt = "^2.8.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
 ruff = "^0.4.8"
+setuptools = "66.1.1"
+pytest-asyncio = "^0.23.7"
+trio = "^0.25.1"
 
 
 [build-system]
