--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "vite": "^5.0.12"
   },
   "scripts": {
-    "dev": "vite"
+    "dev": "vite --host 0.0.0.0",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.0",
