:whale: frontend dockerfile dependency installation by environment

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ APP_BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localho
 
 DB_USER=sentinel
 DB_PASSWORD=12345678
-DB_SERVER=localhost
 DB_PORT=27017
 DB_NAME=sentinel
+
+DB_ROOT_USER=root123
+DB_ROOT_PASSWORD=12345678
