--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - backend
     ports:
       - 5173:5173
+    networks:
+      - default
 
   backend:
     restart: always
@@ -20,16 +22,17 @@ services:
       APP_BACKEND_CORS_ORIGINS: ${APP_BACKEND_CORS_ORIGINS}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
-      DB_SERVER: ${DB_SERVER}
+      DB_SERVER: db
       DB_PORT: ${DB_PORT}
       DB_NAME: ${DB_NAME}
-
     build:
       context: ./backend
       args:
         INSTALL_DEV: ${INSTALL_DEV-false}
     ports:
       - ${APP_PORT}:5000
+    networks:
+      - default
 
   db:
     image: mongo:5.0-focal
@@ -39,12 +42,13 @@ services:
       - ./scripts:/scripts
     env_file:
       - .env
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${DB_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${DB_PASSWORD}
-      MONGO_INITDB_DATABASE: ${DB_NAME}
     ports:
       - ${DB_PORT}:27017
+    networks:
+      - default
+      
+networks:
+  default:
 
 volumes:
   mongo-data:
