--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,22 @@
 # Stage 0, "build-stage", based on Node.js, to build and compile the frontend
 FROM node:22.2.0-alpine as build-stage
 
-WORKDIR /frontend
+WORKDIR /app
 
-COPY package*.json ./
+COPY package*.json /app/
 
-ARG INSTALL_DEV=false
-RUN if [ "$INSTALL_DEV" = "true" ]; then npm ci; else npm ci --only=production; fi
+RUN npm install
 
-# Stage 1, make Ngnix here
-COPY . ./
+COPY ./ /app/ 
 
-EXPOSE 5173
+RUN npm run build
 
-CMD [ "npm", "run", "dev"]
+# Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
+FROM nginx:latest
+
+COPY --from=build-stage /app/dist/ /usr/share/nginx/html
+
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx-backend-not-found.conf /etc/nginx/extra-conf.d/backend-not-found.conf
+
+CMD ["nginx", "-g", "daemon off;"]
