--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "@mui/x-data-grid": "^6.19.3",
     "axios": "^1.7.2",
     "lodash": "^4.17.21",
+    "nginx": "^1.0.8",
     "react-router-dom": "^6.22.0",
     "react-virtuoso": "^4.6.3",
     "swr": "^2.2.5",
+    "typescript": "^5.4.5",
     "use-local-storage": "^3.0.0",
     "vite": "^5.0.12"
   },
