--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-APP_DOMAIN=0.0.0.0
-APP_PORT=5000
-APP_ENVIRONMENT=production
-APP_BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173"
+BACKEND_DOMAIN=0.0.0.0
+BACKEND_PORT=5000
+BACKEND_ENVIRONMENT=production
+BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173"
 
 DB_USER=sentinel
 DB_PASSWORD=12345678
